# LearnPython

./: .gitignore  BUILT_IN_FUNCTIONS.md  CONTEXTS.md  DATA_TYPES.md  DICTIONARY.md  DSA.md  EXCEPTIONS.md  FLASK_GUIDE.md  MARKDOWN_GUIDE.md  MODULES.md  PYTHON_KEYWORDS.md  README.md  REGEX_REFERENCE.md  main.py  pyproject.toml
data_structures/: Data_Structures.md  README.md
data_structures/lists/: README.md  linked_list.py
fundamentals/: README.md
fundamentals/variables/: variables.py
guides/: built-in-functions.md
oop/: Classes_OOP.md  README.md
oop/pets/: main.py  pet.py
regex/: README.md  Regex_Reference.md  find_pattern.py
standard_library/: README.md
types/: list.py
web/: simple_api.py
web/CountryAPI/: main.py
web/Country_API/: CountryAPI.yaml  pyproject.toml
