[project]
name = "LearnPython"
version = "0.1.0"
description = "Python tutorial with comprehensive guides. "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
]

[tool.uv.workspace]
members = [
    "web/CountryAPI",  # FastAPI full API example
    "web/quick-demo",  # FastAPI quick demo
]
